# KMagMux

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakeLists.txt.bench  CMakeLists_test.txt  Dockerfile  KMagMux.desktop  LICENSE  README.md  TODO.md  Vagrantfile  add_json_include.py  benchmark.cpp  benchmark2.cpp  build-docker.sh  find_tracker_deps.sh  fix_api_explorer.patch  fix_build.patch  fix_date_time.py  fix_engine.py  fix_lint.sh  fix_selection.py  fix_torrent_info_sig.py  format.sh  main.diff  mainwindow.diff  org.kde.kmagmux.desktop  org.kde.kmagmux.metainfo.xml  patch_archive_all.py  patch_archive_all_history.py  patch_auto_archive.py  patch_connector.py  patch_context_menu.py  patch_engine.py  patch_engine_on_dispatch_finished.py  patch_info_action.py  patch_info_dialog.py  patch_info_history.py  patch_info_history_fix.py  (+33 more)
.github/workflows/: ci.yml
.jules/: Dockerfile  Dockerfile.ubuntu  build-docker.sh
.jules/mock/: CMakeLists.txt  mock_app.cpp  mock_ui.py
bm_test/: CMakeLists.txt  benchmark.cpp
resources/: kmagmuxui.rc  resources.qrc
src/: main.cpp
src/core/: BencodeParser.cpp  BencodeParser.h  Connector.cpp  Connector.h  Connector.h.orig  Constants.h  Engine.cpp  Engine.cpp.orig  Engine.h  Engine.h.orig  HttpApiEndpoint.h  Item.cpp  Item.h  ItemModel.cpp  ItemModel.h  ItemParser.cpp  ItemParser.h  QBittorrentConnector.cpp  QBittorrentConnector.h  SecureStorage.cpp  SecureStorage.h  StorageManager.cpp  StorageManager.h  TorrentParser.cpp  TorrentParser.h  TrackerClient.cpp  TrackerClient.h
src/kmagmux/core/: models.py  statemachine.py  storage.py
src/plugins/localprogram/: CMakeLists.txt  LocalProgramConnector.cpp  LocalProgramConnector.h  localprogram.json
src/plugins/premiumize/: CMakeLists.txt  PremiumizeConnector.cpp  PremiumizeConnector.h  premiumize.json
src/plugins/putio/: CMakeLists.txt  PutIoConnector.cpp  PutIoConnector.h  putio.json
src/plugins/qbittorrent/: CMakeLists.txt  QBittorrentConnector.cpp  QBittorrentConnector.h  qbittorrent.json
src/plugins/qbittorrent/tests/: CMakeLists.txt  QBittorrentConnectorTest.cpp
src/plugins/realdebrid/: CMakeLists.txt  RealDebridConnector.cpp  RealDebridConnector.h  realdebrid.json
src/plugins/torbox/: CMakeLists.txt  TorBoxConnector.cpp  TorBoxConnector.h  torbox.json
src/ui/: AddItemDialog.cpp  AddItemDialog.h  ApiExplorerDialog.cpp  ApiExplorerDialog.h  BaseItemDialog.cpp  BaseItemDialog.h  ItemFilterProxyModel.cpp  ItemFilterProxyModel.h  LinkExtractorDialog.cpp  LinkExtractorDialog.h  MainWindow.cpp  MainWindow.h  MaxWidthDelegate.h  PreferencesDialog.cpp  PreferencesDialog.h  ProcessItemDialog.cpp  ProcessItemDialog.h  TorrentInfoDialog.cpp  TorrentInfoDialog.h  kmagmuxui.rc
tests/: CMakeLists.txt  test_statemachine.py  test_storage.py
tests/core/: CMakeLists.txt  MockPlugin.cpp  MockPlugin.h  TestBencodeParser.cpp  TestEngine.cpp  TestItemParser.cpp  TestSecureStorage.cpp  TestStorageManager.cpp  TestTorrentParser.cpp  TestTrackerClient.cpp  benchmark.cpp
tests/plugins/: CMakeLists.txt
tests/plugins/localprogram/: CMakeLists.txt  TestLocalProgramConnector.cpp
